--- a/index.html
+++ b/index.html
@@ -4,7 +4,26 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="Strona z cytatami stworzona dla Emili" />
+		<meta name="author" content="mosmo0220" />
+		<link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon" />
 		<link rel="stylesheet" href="index.css" />
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/core.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/md5.js"></script>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=G-ZG7MBW2SXN"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag("js", new Date());
+
+			gtag("config", "G-ZG7MBW2SXN");
+		</script>
 		<title>Hello Emilia</title>
 	</head>
 	<body>
@@ -21,7 +40,6 @@
 			</div>
 			<div class="content"> </div>
 		</div>
-
 		<p class="desc"
 			><a href="https://github.com/mosmo0220">mosmo0220</a> - Marcin Osmolak
 			Rogaluk</p
