--- a/index.html
+++ b/index.html
@@ -3,25 +3,11 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="Strona z cytatami stworzona dla Emili" />
 		<meta name="author" content="mosmo0220" />
-		<link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon" />
 		<link rel="stylesheet" href="index.css" />
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script
-			async
-			src="https://www.googletagmanager.com/gtag/js?id=G-ZG7MBW2SXN"
-		></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag() {
-				dataLayer.push(arguments);
-			}
-			gtag("js", new Date());
-
-			gtag("config", "G-ZG7MBW2SXN");
-		</script>
 		<title>Hello Emilia</title>
 	</head>
 	<body>
@@ -42,6 +28,9 @@
 			><a href="https://github.com/mosmo0220">mosmo0220</a> - Marcin Osmolak
 			Rogaluk</p
 		>
+		<script>
+			let host = window.location.href;
+		</script>
 		<script src="index.js"></script>
 	</body>
 </html>
