--- a/pages/index.html
+++ b/pages/index.html
@@ -3,11 +3,12 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon" />
+		<link rel="shortcut icon" href="/images/icons-512.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="Strona z cytatami stworzona dla Emili" />
 		<meta name="author" content="mosmo0220" />
-		<link rel="stylesheet" href="index.css" />
+		<link rel="stylesheet" href="/css/index.css" />
+		<link rel="manifest" href="/manifest.json" />
 		<title>Hello Emilia</title>
 	</head>
 	<body>
@@ -24,13 +25,36 @@
 			</div>
 			<div class="content"> </div>
 		</div>
-		<p class="desc"
-			><a href="https://github.com/mosmo0220">mosmo0220</a> - Marcin Osmolak
-			Rogaluk</p
-		>
-		<script>
-			let host = window.location.href;
-		</script>
-		<script src="index.js"></script>
+
+		<div class="desc btnbar">
+			<div class="version"> Notification and Style update - 1.3.0 beta </div>
+			<div class="news">
+				<div>
+					<h2>Nowy desing</h2>
+					<p>
+						Pozwala on zwiększyć czytelność strony i organizacje. Została
+						również dodana możliwość otworzenia strony w trybie aplikacji</p
+					>
+				</div>
+				<div>
+					<h2>Powiadomienia (wersja niestabilna)</h2>
+					<p
+						>Aplikacja sama ci przypomni kiedy zostanie dodnany nowy cytat. Po
+						włączeniu upewnij się, że zezwoliłaś na powiadomienia i masz
+						włączoną sychronizacje (starsze Androidy)</p
+					>
+					<p>> notification</p>
+				</div>
+			</div>
+			<div class="btndownbar">
+				<p>W razie problemów, zgłaszać na mess (info: beta1.3.0)</p>
+			</div>
+			<div class="btndownbar">
+				<p class="theme"></p>
+				<p class="notification"></p>
+			</div>
+		</div>
+		<script src="/js/cookie.js"></script>
+		<script src="/js/index.js"></script>
 	</body>
 </html>
