--- a/pages/index.html
+++ b/pages/index.html
@@ -3,11 +3,11 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<link rel="shortcut icon" href="/images/icons-512.png" />
+		<link rel="shortcut icon" href="/icons-512.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="Strona z cytatami stworzona dla Emili" />
 		<meta name="author" content="mosmo0220" />
-		<link rel="stylesheet" href="/css/index.css" />
+		<link rel="stylesheet" href="/index/index.css" />
 		<link rel="manifest" href="/manifest.json" />
 		<title>Hello Emilia</title>
 	</head>
@@ -27,7 +27,7 @@
 		</div>
 
 		<div class="desc btnbar">
-			<div class="version"> Notification and Style update - 1.3.0 beta </div>
+			<div class="version">Stylistic - 1.3.1 </div>
 			<div class="news">
 				<div>
 					<h2>Nowy desing</h2>
@@ -37,24 +37,20 @@
 					>
 				</div>
 				<div>
-					<h2>Powiadomienia (wersja niestabilna)</h2>
+					<h2>Zapis/Odczyt kart</h2>
 					<p
-						>Aplikacja sama ci przypomni kiedy zostanie dodnany nowy cytat. Po
-						włączeniu upewnij się, że zezwoliłaś na powiadomienia i masz
-						włączoną sychronizacje (starsze Androidy)</p
+						>Aplikacja pozwala za pomocą prostych kommend otwierać i zapisywać
+						otwarte karty dla szybszego dostępu później</p
 					>
-					<p>> notification</p>
+					<p>> close - zapis</p>
+					<p>> open - oddczyt</p>
 				</div>
 			</div>
 			<div class="btndownbar">
-				<p>W razie problemów, zgłaszać na mess (info: beta1.3.0)</p>
-			</div>
-			<div class="btndownbar">
 				<p class="theme"></p>
-				<p class="notification"></p>
 			</div>
 		</div>
-		<script src="/js/cookie.js"></script>
-		<script src="/js/index.js"></script>
+		<script src="/cookie.js"></script>
+		<script src="/index/index.js"></script>
 	</body>
 </html>
