--- a/pages/panel.html
+++ b/pages/panel.html
@@ -7,12 +7,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="Strona z cytatami stworzona dla Emili" />
 		<meta name="author" content="mosmo0220" />
-		<link rel="stylesheet" href="/css/panel.css" />
+		<link rel="stylesheet" href="/panel/index.css" />
 		<link rel="manifest" href="/manifest.json" />
 		<title>Admin panel</title>
 	</head>
 	<body>
-		<script src="/js/cookie.js"></script>
-		<script src="/js/panel.js"></script>
+		<script src="/cookie.js"></script>
+		<script src="/panel/index.js"></script>
 	</body>
 </html>
